[package]
name = "netlify-rust"
version = "0.1.0"
authors = ["Brad Cypert <brad.cypert@gmail.com>"]
description = "JSON Web Token library"
homepage = "http://github.com/bradcypert/netlify-rust"
repository = "http://github.com/bradcypert/netlify-rust"
readme = "README.md"
keywords = ["netlify client", "netlify"]
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
